# h-agent

./: .env.example  .gitignore  CHANGELOG-en.md  CLAW0_INTEGRATION.md  DEVLOG.md  QUICKSTART-en.md  QUICKSTART.md  README-en.md  README.md  TEST_REPORT_PHASE1.md  TEST_REPORT_PHASE7_8.md  USER_GUIDE-en.md  USER_GUIDE.md  ZOO_INTEGRATION.md  __main__.py  c03_sessions.py  c04_channels.py  c05_gateway_routing.py  c06_intelligence.py  c07_heartbeat_cron.py  c08_delivery.py  c09_resilience.py  c10_concurrency.py  cross_platform_shell.py  hello.txt  package-lock.json  pyproject.toml  rag_codebase.py  requirements.txt  s01_agent_loop.py  s02_tool_use.py  s03_todo_write.py  s04_subagent.py  s05_skill_loading.py  s06_context_compact.py  s07_task_system.py  s08_background_tasks.py  s09_agent_teams.py  s10_team_protocols.py  s11_autonomous_agents.py  (+14 more)
.github/workflows/: test.yml
design-docs/: agent-adapter-web-en.md  backend-session-design-en.md
docs/guides/: agent-team-best-practices-en.md  agent-team-en.md  agent-team-user-guide-en.md  agent-team-user-guide.md  cli-adapters-en.md  cli-reference-en.md  cli-reference.md  codebase-en.md  core-en.md  daemon-en.md  features-en.md  full-experience-flow.md  installation-en.md  memory-en.md  planner-en.md  plugins-en.md
h_agent/: __init__.py  __main__.py  errors.py  logging_config.py  platform_utils.py
h_agent/adapters/: opencode_adapter.py
h_agent/bridge/: __init__.py  handlers.py  jwt_utils.py  protocol.py  server.py
h_agent/buddy/: __init__.py  companion.py  display.py  prompt.py  sprites.py  types.py
h_agent/cli/: __init__.py  app.py  commands.py  controller.py  init_wizard.py  keybindings.py  render.py  repl.py  state.py
h_agent/commands/: __init__.py  base.py  bridge.py  clear.py  commit.py  compact.py  config.py  cost.py  diff.py  doctor.py  exit.py  feedback.py  help.py  history.py  mcp.py  memory.py  model.py  plugin.py  registry.py  resume.py  review.py  sessions.py  skills.py  status.py  tasks.py  theme.py  tools.py  upgrade.py  usage.py  vim.py  voice.py
h_agent/concurrency/: __init__.py  command_queue.py  cron.py  heartbeat.py  lanes.py
h_agent/coordinator/: __init__.py  messaging.py  orchestrator.py  pool.py
h_agent/core/: __init__.py  agent_loop.py  config.py  engine.py  tools.py
h_agent/delivery/: __init__.py  queue.py  runner.py
h_agent/features/: __init__.py  channels.py  rag.py  sessions.py  skills.py  subagents.py  tasks.py
h_agent/keybindings/: __init__.py  config.py
h_agent/mcp/: __init__.py  client.py  protocol.py  transport.py
h_agent/migrations/: __init__.py  core.py
h_agent/permissions/: __init__.py  checker.py  context.py  rules.py
h_agent/plugins/: __init__.py  loader.py  registry.py  schema.py  web_tools.py
h_agent/resilience/: __init__.py  classify.py  profiles.py  runner.py
h_agent/screens/: __init__.py  doctor.py
h_agent/services/: __init__.py  compact.py
h_agent/session/: __init__.py  manager.py  resume.py  storage.py  transcript.py
h_agent/skills/: __init__.py  base.py  loader.py  registry.py
h_agent/team/: agent.py  async_team.py
h_agent/tests/: test_async_team.py  test_concurrency.py  test_delivery.py  test_heartbeat.py  test_resilience.py  test_tools_s02_s06.py  test_tools_s07_s08.py  test_tools_s09_s12.py
h_agent/tools/: __init__.py  agent.py  ask.py  base.py  bash.py  docker.py  file_edit.py  file_ops.py  file_read.py  git.py  (+20 more)
pyagent/: __init__.py  agent.py  cli.py
scripts/: verify_full_experience.py
skills/: code-review-en.md  code-review.md  git-workflow-en.md  git-workflow.md
tests/: __init__.py  test_agent.py  test_buddy.py  test_cli_controller.py  test_cli_entrypoints.py  test_engine.py  test_errors.py  test_keybindings.py  test_memory.py  test_migrations.py  test_permissions.py  test_platform_utils.py  test_screens.py  test_session_manager.py  test_tools.py  test_tools_base.py  test_tools_new.py  test_tools_registry.py
(+32 files in other folders)
